# quadwild-bimdf-cuda

./: CLAUDE.md  CMakeLists.txt  demo.sh  experiments.md
components/field_computation/: mesh_manager.h
components/quad_from_patches/: CMakeLists.txt  main.cpp
cuda/: CMakeLists.txt  admm_solver.cu  admm_solver.h  bimdf_bridge.h  bimdf_cuda.cu  bimdf_cuda.h  chart_kernels.cu  chart_kernels.h  pdhg_solver.cu  pdhg_solver.h  qw_checkpoint.cpp  qw_checkpoint.h  qw_serialize.h  rxmesh_remesh.cu  rxmesh_remesh.h  sa_solver.cu  sa_solver.h  smooth_kernels.cu  smooth_kernels.h  suitor_solver.cu  suitor_solver.h  test_rxmesh_remesh.cu  vcg_bridge.h
examples/: stanford-bunny_rem.rosy  stanford-bunny_rem.sharp
libs/quadretopology/: CMakeLists.txt
libs/quadretopology/quadretopology/: qr_flow.cpp
libs/quadretopology/quadretopology/includes/: qr_parameters.h
libs/rxmesh/: CMakeLists.txt
libs/rxmesh/include/rxmesh/: arg_ops.h  cub_compat.h  reduce_handle.h  rxmesh_dynamic.cu  rxmesh_dynamic.h  rxmesh_static.inl
libs/rxmesh/include/rxmesh/kernels/: query_dispatcher.cuh
libs/rxmesh/include/rxmesh/util/: cuda_query.h  macros.h
quadwild/: CMakeLists.txt  functions.cpp  functions.h  quadwild.cpp
